# gestorListasReproduccion

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
data/: sources.json
gestor_listas/: __init__.py  audio.py  bpm_analyzer.py  cli.py  config.py  errors.py  http.py  model.py  storage.py  sync.py  util.py
gestor_listas/downloaders/: __init__.py  deezer.py  manager.py  youtube.py
gestor_listas/importers/: __init__.py  spotify.py  youtube.py
gestor_listas/providers/: __init__.py  base.py  deezer.py  spotify.py  youtube.py
tests/: conftest.py  test_audio.py  test_bpm_analyzer.py  test_downloaders.py  test_importers.py  test_importers_youtube.py  test_infra.py  test_integration.py  test_model.py  test_providers.py  test_storage.py  test_sync.py
