[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestor-listas"
version = "0.1.0"
description = "Librería para gestionar listas de reproducción entre servicios de streaming"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.26",
    "deezer-python>=7.3",
    "python-dotenv>=1.0",
    "spotipyfree>=1.9",
    "websockets>=16",
    "mutagen>=1.47",
    "numpy>=2.0",
    "scipy>=1.14",
    "cryptography>=44.0",
    "requests>=2.32",
    "yt-dlp>=2026.07",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["gestor_listas*"]
exclude = ["data*", "tests*"]

[project.scripts]
gestor-listas = "gestor_listas.cli:app"

[tool.pytest.ini_options]
addopts = "--cov=gestor_listas --cov-report=term-missing --cov-fail-under=70 -m 'not integration'"
markers = [
    "integration: pruebas que requieren red o binarios externos (ffmpeg, yt-dlp); desactivadas por defecto",
]
